fixed scrollbar issue on webapp (board section)

--- a/index/board/board.responsive.css
+++ b/index/board/board.responsive.css
@@ -56,10 +56,15 @@
 	#board-wrapper {
 		gap: 10px;
 		padding: 2vh 1rem 0;
+		overflow: hidden;
 	}
 }
 
 @media (max-width: 500px) {
+	#content {
+		overflow: hidden;
+	}
+
 	#fullscreen-task-modal :is(#fullscreen-task, #edit-task) {
 		min-width: 0;
 	}
